@@ -1,5 +1,11 @@
 2005-08-24  Yves Combe  <yves@ycombe.net>
 
+	trace a bit more.
+
+	* src/gcompris/gcompris_db.c: (gcompris_get_conf_with_table):
+
+2005-08-24  Yves Combe  <yves@ycombe.net>
+
 	change init_background and board_play order to get entry login active on launch.
 	improve wrap lines behaviour in textview tool.
 	fix database rights check.
